added my footer section

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <h2>Reebok Dart Men’s Shoes</h2>
                 <span>Amet minim mollit non deserunt ullamco
                     est sit aliqua dolor do amet sint. </span>
-                    <span class="prais">$1289</span>
+                    <span class="prais"><h2>$1289</h2></span>
                     <button class="by-button">BY NOW <i class="fa-solid fa-arrow-right-long"></i></button>
             </div>
 
@@ -98,7 +98,7 @@
                 <h2>Reebok Pump</h2>
                 <span>Amet minim mollit non deserunt ullamco
                     est sit aliqua dolor do amet sint. </span>
-                    <span class="prais">$799</span>
+                    <span class="prais"><h2>$799</h2></span>
                     <button class="by-button">BY NOW <i class="fa-solid fa-arrow-right-long"></i></button>
             </div>
             <div class="card">
@@ -106,7 +106,7 @@
                 <h2>Reebok All Terrain</h2>
                 <span>Amet minim mollit non deserunt ullamco
                     est sit aliqua dolor do amet sint. </span>
-                    <span class="prais">$699</span>
+                    <span class="prais"><h2>$699</h2></span>
                     <button class="by-button">BY NOW <i class="fa-solid fa-arrow-right-long"></i></button>
             </div>
 
@@ -116,13 +116,13 @@
                 <h3>Backpack</h3>
                 <p>See all</p>
             </div>
-            <div class="shos-card-containar">
+            <div class="backpack shos-card-containar">
             <div class="card">
                 <img src="./assets/images/bags/bag-1.png" id="bag">
                 <h2>Ison Backpack</h2>
                 <span>Amet minim mollit non deserunt ullamco
                     est sit aliqua dolor do amet sint. </span>
-                    <span class="prais">$1289</span>
+                    <span class="prais"><h2>$1289</h2></span>
                     <button class="by-button">BY NOW <i class="fa-solid fa-arrow-right-long"></i></button>
             </div>
 
@@ -131,7 +131,7 @@
                 <h2>Reebok Pump</h2>
                 <span>Amet minim mollit non deserunt ullamco
                     est sit aliqua dolor do amet sint. </span>
-                    <span class="prais">$799</span>
+                    <span class="prais"><h2>$799</h2></span>
                     <button class="by-button">BY NOW <i class="fa-solid fa-arrow-right-long"></i></button>
             </div>
             <div class="card">
@@ -139,7 +139,7 @@
                 <h2>Reebok All Terrain</h2>
                 <span>Amet minim mollit non deserunt ullamco
                     est sit aliqua dolor do amet sint. </span>
-                    <span class="prais">$699</span>
+                    <span class="prais"> <h2>$699</h2></span>
                     <button class="by-button">BY NOW <i class="fa-solid fa-arrow-right-long"></i></button>
             </div>
 
@@ -147,6 +147,21 @@
 
 
         </section>
+
+        <footer>
+
+            <div class="footer-box containar">
+
+                <h1>LET'S STAY IN TOUCH</h1>
+                <span>Get updates on sales specials and more</span>
+                <div class="input-section">
+                    <input type="email" placeholder="Enter Your Email">
+                    <button class="panda-btn" id="in-b">Send</button>
+                </div>
+
+            </div>
+                
+        </footer>
     </main>
 </body>
 </html>
